k8s/orders-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\SourceCode\docker-k8s-demo\kompose.exe convert -f docker-compose.yml
      -f docker-compose.dev.yml
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: orders-api
  name: orders-api-service
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 5010
    targetPort: 80
    protocol: TCP
  selector:
    io.kompose.service: orders-api
status:
  loadBalancer: {}
