k8s/rabbit-mq-mgmt-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\SourceCode\docker-k8s-demo\kompose.exe convert -f docker-compose.yml
      -f docker-compose.dev.yml
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit-mq-mgmt
  name: rabbit-mq-mgmt-service
spec:
  type: NodePort
  ports:
  - name: "9080"
    port: 9080
    targetPort: 15672
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: rabbit-mq-mgmt
status:
  loadBalancer: {}
