k8s/ravendb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\SourceCode\docker-k8s-demo\kompose.exe convert -f docker-compose.yml
      -f docker-compose.dev.yml
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: ravendb
  name: ravendb
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 8000
    targetPort: 8080
  selector:
    io.kompose.service: ravendb
status:
  loadBalancer: {}
